@@ -4,6 +4,8 @@ Revision history for Net-Silverpeak-Orchestrator
     - fix hardcoded template group name instead of
       NET_SILVERPEAK_ORCHESTRATOR_POLICY environment variable
     - skip appliance tests if Orchestrator has none assigned
+    - don't expect existing template group NET_SILVERPEAK_ORCHESTRATOR_POLICY
+      for tests but create it
     - add create_templategroup method
     - add update_templates_of_templategroup method
     - add delete_templategroup method
